--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -39,11 +39,16 @@ a {
    ========================================================================== */
 
 /**
- * Remove the border on images inside links in IE 10.
+ * 1. Remove the border on images inside links in IE 10.
+ * 2. Add responsive styles
  */
 
 img {
-    border-style: none;
+    border-style: none; /* 1 */
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
 }
 
 /* Forms
@@ -179,4 +184,10 @@ textarea {
 
 details {
     display: block;
+}
+
+*,
+*:before,
+*:after {
+    box-sizing: border-box;
 }
