--- a/src/scss/background.scss
+++ b/src/scss/background.scss
@@ -1,8 +1,21 @@
 .background {
     transition: opacity 2s ease 1.2s;
     opacity: 0;
+    clip-path: inset(87px 30px 30px);
+    position: relative;
+    z-index: $z-index-scene;
 }
 
-.body--loaded .background {
-    opacity: .4;
+.background__solid {
+    position: absolute;
+    top: 67px;
+    left: 30px;
+    right: 30px;
+    height: calc(100vh - 67px - 10px);
+    background: linear-gradient(transparent 0, #0a0b0e 20px, #0a0b0e calc(100% - 20px), transparent 100%);
+    z-index: $z-index-scene;
+}
+
+.is--loaded .background {
+    opacity: 0.4;
 }
