--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,4 +1,10 @@
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-    background: #121418;
+    background: #0a0b0e;
     color: #ECEFF4;
+    font-family: Arial, Helvetica, sans-serif;
 }
