--- a/src/scss/hamburger.scss
+++ b/src/scss/hamburger.scss
@@ -1,16 +1,74 @@
 .hamburger {
-    width: 32px;
+    padding: 30px;
     display: block;
 }
 
+.hamburger__container {
+    width: 32px;
+    height: 22px;
+    position: relative;
+}
+
 .hamburger__line {
+    position: absolute;
+    left: 0;
     width: 100%;
-    margin-top: 8px;
     height: 2px;
     background: #fff;
     border-radius: 6px;
 
-    &:first-child {
-        margin-top: 0;
+    &:nth-child(2) {
+        top: 10px;
+    }
+
+    &:nth-child(3) {
+        top: 20px;
+    }
+}
+
+.is--menu-active .hamburger__line {
+    &:nth-child(1) {
+        animation: hamburger__line--first .3s ease forwards;
+    }
+
+    &:nth-child(2) {
+        animation: hamburger__line--second .3s ease forwards;
+    }
+
+    &:nth-child(3) {
+        animation: hamburger__line--third .3s ease forwards;
+    }
+}
+
+@keyframes hamburger__line--first {
+    0% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(0, 10px);
+    }
+    100% {
+        transform: translate(0, 10px) rotate(45deg);
+    }
+}
+
+@keyframes hamburger__line--second {
+    50% {
+        opacity: 0
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+@keyframes hamburger__line--third {
+    0% {
+        transform: translate(0, 0);
+    }
+    50% {
+        transform: translate(0, -10px);
+    }
+    100% {
+        transform: translate(0, -10px) rotate(-45deg);
     }
 }
