--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,11 +1,19 @@
 .header {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    right: 30px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    padding: 20px 30px;
+    background: #0a0b0e;
+    z-index: $z-index-header;
 }
 
 .header__logo {
     max-width: 200px;
     margin: 0 auto;
+    transition: opacity 2s ease .2s;
+    opacity: 0;
+}
+
+.is--loaded .header__logo {
+    opacity: 1;
 }
