--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,4 @@
+@import 'z-index';
 @import 'normalize';
 @import 'global';
 @import 'tetragon';
@@ -5,3 +6,10 @@
 @import 'header';
 @import 'hamburger';
 @import 'offcanvas-menu';
+@import 'overlay';
+@import 'list-item';
+@import 'justify-center';
+@import 'form';
+@import 'field';
+@import 'select-field';
+@import 'section';
