--- a/src/scss/tetragon.scss
+++ b/src/scss/tetragon.scss
@@ -14,6 +14,7 @@ $tetragon-size: 60vmin;
     will-change: opacity;
     contain: paint;
     z-index: $z-index-scene;
+    user-select: none;
 }
 
 .is--loaded .scene {
