--- a/src/scss/z-index.scss
+++ b/src/scss/z-index.scss
@@ -1,3 +1,4 @@
 $z-index-header: 1;
 $z-index-scene: $z-index-header + 1;
 $z-index-offcanvas-menu: $z-index-scene + 1;
+$z-index-overlay: $z-index-offcanvas-menu + 1;
