--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,5 @@
 @import 'z-index';
+@import 'color';
 @import 'normalize';
 @import 'global';
 @import 'tetragon';
@@ -13,3 +14,6 @@
 @import 'field';
 @import 'select-field';
 @import 'section';
+@import 'button';
+@import 'image-radio';
+@import 'link';
