--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -7,5 +7,10 @@ html {
 body {
     background: #0a0b0e;
     color: #ECEFF4;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Overpass, Arial, Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+a {
+    color: #fff;
 }
