--- a/src/scss/offcanvas-menu.scss
+++ b/src/scss/offcanvas-menu.scss
@@ -51,6 +51,11 @@
     padding: 30px 0;
 }
 
+.offcanvas-menu__subfooter {
+    margin-top: 10px;
+    color: #3b414e;
+}
+
 .offcanvas-menu__footer {
     margin-top: auto;
     text-align: center;
