--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -10,23 +10,33 @@
     background: #12151a;
     min-height: 100%;
     flex: 1 0;
+    overflow: hidden;
 }
 
 .section__content {
-    padding: 15px;
+    padding: 15px 15px 30px;
+    max-width: 620px;
+    margin: 0 auto;
 }
 
 .section__title {
-    background: #181b22;
     color: #ECEFF4;
     margin: 0;
     padding: 15px;
-    font-weight: 300;
+    font-weight: 900;
+    font-size: 60px;
+    letter-spacing: 0.05em;
     text-transform: uppercase;
+    text-align: center;
 
-    &:before {
-        content: '▷';
-        margin-right: .6em;
-        color: #2d3a3e;
+    @media (min-width: 768px) {
+        font-size: 80px;
     }
+}
+
+.section__subtitle {
+    color: #eceff4;
+    font-size: 40px;
+    margin: 0;
+    padding: 0 15px;
 }
