--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,4 @@
+@import 'font';
 @import 'z-index';
 @import 'color';
 @import 'normalize';
@@ -17,3 +18,4 @@
 @import 'button';
 @import 'image-radio';
 @import 'link';
+
