--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,17 +5,14 @@
 @import 'global';
 @import 'tetragon';
 @import 'background';
-@import 'header';
 @import 'hamburger';
-@import 'offcanvas-menu';
-@import 'overlay';
+@import 'header';
 @import 'list-item';
 @import 'justify-center';
 @import 'form';
 @import 'field';
-@import 'select-field';
 @import 'section';
 @import 'button';
 @import 'image-radio';
 @import 'link';
-
+@import 'soundcloud';
