--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -10,10 +10,64 @@
 .header__logo {
     max-width: 200px;
     margin: 0 auto;
-    transition: opacity 2s ease .2s;
     opacity: 0;
+    animation: 2s ease 0.2s 1 reveal-full forwards;
 }
 
-.is--loaded .header__logo {
-    opacity: 1;
+.header__socials {
+    position: fixed;
+    z-index: $z-index-offcanvas-menu;
+    top: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
+    display: none;
+    background: #0a0b0e;
+
+    .is--menu-active & {
+        display: block;
+    }
+
+    @media (min-width: 600px) {
+        display: block;
+        left: auto;
+        right: 30px;
+        background: none;
+    }
+}
+
+.header__social {
+    display: inline-block;
+    line-height: 87px;
+    padding: 0 7px;
+    text-decoration: none;
+
+    &:last-child {
+        margin-right: -7px;
+    }
+}
+
+.header__social-icon {
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
+    opacity: 0.8;
+}
+
+.header__hamburger {
+    position: fixed;
+    z-index: $z-index-offcanvas-menu;
+
+    @media (min-width: 600px) {
+        display: none;
+    }
+}
+
+@keyframes reveal-full {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
