--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -23,6 +23,8 @@
     text-align: center;
     display: none;
     background: #0a0b0e;
+    opacity: 0;
+    animation: 0.7s ease 0.65s 1 reveal-full forwards;
 
     .is--menu-active & {
         display: block;
@@ -51,7 +53,8 @@
     width: 24px;
     height: 24px;
     vertical-align: middle;
-    opacity: 0.8;
+    color: rgba(255, 255,  255, 0.8);
+    filter: drop-shadow(0px 0px 5px #000);
 }
 
 .header__hamburger {
