fix background height

--- a/src/scss/background.scss
+++ b/src/scss/background.scss
@@ -3,6 +3,7 @@
     clip-path: inset(87px 30px 30px);
     position: relative;
     z-index: $z-index-scene;
+    height: 100vh;
 }
 
 .background--is-painted {
