Remove soundcloud, add spotify & youtube

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,7 @@
 @import 'font';
 @import 'z-index';
 @import 'color';
+@import 'aspect-ratio';
 @import 'normalize';
 @import 'global';
 @import 'tetragon';
@@ -17,3 +18,6 @@
 @import 'link';
 @import 'soundcloud';
 @import 'email-guard';
+@import 'spotify-grid';
+@import 'youtube-grid';
+@import 'youtube-poster';
