--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -7,8 +7,7 @@ html {
 body {
     background: #0a0b0e;
     color: #ECEFF4;
-    font-family: Overpass, Arial, Helvetica, sans-serif;
-    font-weight: 300;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a {
