--- a/src/scss/section.scss
+++ b/src/scss/section.scss
@@ -23,11 +23,24 @@
     flex: 1 1 auto;
 }
 
+.section__content--auto {
+    max-width: max-content;
+}
+
+.section__content--full {
+    max-width: none;
+}
+
+.section__content--wide {
+    max-width: 970px;
+}
+
 .section__title {
     color: #ECEFF4;
     margin: 0;
     padding: 15px;
-    font-weight: 900;
+    font-family: 'Lato', sans-serif;
+    font-weight: 200;
     font-size: 50px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
