update - add new spotify item

--- a/src/scss/youtube-poster.scss
+++ b/src/scss/youtube-poster.scss
@@ -41,9 +41,9 @@
     width: 65px;
     transform: translate(-50%, -50%);
     transition: color .2s ease;
-    color: #1d1d1db3;
+    color: #ffffffb3;
 
     .youtube-poster:hover & {
-        color: #1d1d1d;
+        color: #ffffff;
     }
 }
