--- a/src/scss/spotify-grid.scss
+++ b/src/scss/spotify-grid.scss
@@ -14,7 +14,7 @@
     justify-content: center;
 
     @media (min-width: 768px) {
-        grid-column-end: 3;
+        --grid-column-end: 3;
     }
 }
 
