--- a/src/scss/youtube-grid.scss
+++ b/src/scss/youtube-grid.scss
@@ -3,6 +3,9 @@
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-gap: 20px;
+    @media (min-width: 1024px) {
+        grid-template-columns: 1fr 1fr;
+    }
 }
 
 .youtube-grid__item {
@@ -17,6 +20,6 @@
 
 .youtube-grid__item:first-child {
     @media (min-width: 768px) {
-        grid-column: 1 / 3;
+        grid-column: 1 / 2;
     }
 }
