--- a/src/scss/aspect-ratio.scss
+++ b/src/scss/aspect-ratio.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @mixin aspect-ratio($width, $height) {
     position: relative;
 
@@ -5,7 +7,7 @@
         display: block;
         content: '';
         width: 100%;
-        padding-top: ($height / $width) * 100%;
+        padding-top: math.div($height, $width) * 100%;
     }
 
     > * {
