add easteregg, improve text legibility, replace old spotify-links

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -12,4 +12,10 @@ body {
 
 a {
     color: #fff;
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
+
+p {
+    line-height: 1.5;
 }
