--- a/src/scss/link.scss
+++ b/src/scss/link.scss
@@ -1,5 +1,4 @@
 .link {
-    border-bottom: 1px solid #fff;
-    padding-bottom: 3px;
-    text-decoration: none;
+    text-decoration: underline;
+    text-underline-offset: 7px;
 }
