Add new tracks 'Magnetar' and 'Fg=Mxg'

--- a/src/scss/spotify-grid.scss
+++ b/src/scss/spotify-grid.scss
@@ -25,9 +25,9 @@
     @media (min-width: 768px) {
         height: 232px;
 
-        &:last-of-type {
-            grid-column-start: 2;
-        }
+        /*&:last-of-type {
+            grid-column-start: 3;
+        }*/
     }
 
     > iframe {
