--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -1,8 +1,7 @@
 @font-face {
-    font-family: 'Lato';
-    src: url('../font/lato/latolatin-thin-webfont.woff2') format('woff2'),
-        url('../font/lato/latolatin-thin-webfont.woff') format('woff');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Lato';
+  src: url('/font/lato/latolatin-thin-webfont.woff2') format('woff2'), url('/font/lato/latolatin-thin-webfont.woff') format('woff');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
 }
