--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -21,3 +21,16 @@
 @import 'spotify-grid';
 @import 'youtube-grid';
 @import 'youtube-poster';
+@import 'product-tile';
+@import 'product-gallery';
+@import 'flag';
+@import 'modal';
+@import 'close-button';
+@import 'product-detail';
+@import 'image-gallery';
+@import 'product-bundle';
+@import 'bottom-sheet';
+@import 'cart-content';
+@import 'open-basket-button';
+@import 'toastify';
+@import 'badge';
