--- a/src/scss/youtube-poster.scss
+++ b/src/scss/youtube-poster.scss
@@ -1,49 +1,53 @@
 .youtube-poster {
-    overflow: hidden;
+  overflow: hidden;
+
+  &:hover {
+    color: inherit;
+  }
 }
 
 .youtube-poster__image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center center;
-    transform: scale(1.1);
-    filter: blur(5px);
-    cursor: pointer;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center center;
+  transform: scale(1.1);
+  filter: blur(5px);
+  cursor: pointer;
 }
 
 .youtube-poster__title {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 20px 30px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    font-family: 'Lato', sans-serif;
-    font-size: 22px;
-    text-shadow: 0 0 0.3em #000000de;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 20px 30px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  font-family: 'Lato', sans-serif;
+  font-size: 22px;
+  text-shadow: 0 0 0.3em #000000de;
 
-    @media (min-width: 768px) {
-        font-size: 42px;
+  @media (min-width: 768px) {
+    font-size: 42px;
 
-        .youtube-poster--small & {
-            font-size: 22px;
-        }
+    .youtube-poster--small & {
+      font-size: 22px;
     }
+  }
 }
 
 .youtube-poster__play-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 65px;
-    transform: translate(-50%, -50%);
-    transition: color .2s ease;
-    color: #ffffffb3;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 65px;
+  transform: translate(-50%, -50%);
+  transition: color 0.2s ease;
+  color: #ffffffb3;
 
-    .youtube-poster:hover & {
-        color: #ffffff;
-    }
+  .youtube-poster:hover & {
+    color: #ffffff;
+  }
 }
