--- a/src/scss/z-index.scss
+++ b/src/scss/z-index.scss
@@ -2,3 +2,4 @@ $z-index-header: 1;
 $z-index-scene: $z-index-header + 1;
 $z-index-offcanvas-menu: $z-index-scene + 1;
 $z-index-overlay: $z-index-offcanvas-menu + 1;
+$z-index-modal: $z-index-overlay + 1;
