--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,8 @@ export interface Props {
 	title: string;
 }
 
-const { title } = Astro.props
+const { title, lang } = Astro.props
+import { Sprite } from 'astro-icon';
 import 'toastify-js/src/toastify.css';
 import '../scss/index.scss';
 ---
@@ -50,6 +51,8 @@ import '../scss/index.scss';
         }
     </script>
 
-    <slot/>
+    <Sprite.Provider>
+      <slot/>
+    </Sprite.Provider>
 </body>
 </html>
