--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,25 +3,18 @@ import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
 import { products } from '../data/products';
 import { spotifyTracks } from '../data/spotify-tracks';
-import { youtubeSets } from '../data/youtube-sets';
+import { youtubeVideos } from '../data/youtube-videos';
 import { formatCurrency } from '../utils/format-currency';
 import OpenBasketButton from '../components/OpenBasketButton.astro';
+import Hero from '../components/Hero.astro';
+import { Sprite } from 'astro-icon';
+import Footer from '../components/Footer.astro';
 ---
 
 <Layout title="Tedra">
   <Header />
 
-  <div class="background__solid"></div>
-  <canvas class="background" id="bg" style="display:block;"></canvas>
-
-  <div class="scene">
-    <div class="tetragon">
-      <svg class="tetragon__surface tetragon__surface--bottom"><use xlink:href="#polygon"></use></svg>
-      <svg class="tetragon__surface tetragon__surface--front"><use xlink:href="#polygon"></use></svg>
-      <svg class="tetragon__surface tetragon__surface--left"><use xlink:href="#polygon"></use></svg>
-      <svg class="tetragon__surface tetragon__surface--right"><use xlink:href="#polygon"></use></svg>
-    </div>
-  </div>
+  <Hero />
 
   <div class="section" id="spotify">
     <div class="section__inner">
@@ -49,14 +42,12 @@ import OpenBasketButton from '../components/OpenBasketButton.astro';
       <div class="section__content section__content--wide justify-center">
         <div class="youtube-grid">
           {
-            youtubeSets.map((youtubeSet) => (
+            youtubeVideos.map((youtubeVideo) => (
               <div class="youtube-grid__item">
-                <a href={'https://www.youtube.com/watch?v=' + youtubeSet.id} class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url={'https://www.youtube.com/embed/' + youtubeSet.id + '?autoplay=1'} target="_blank">
-                  <img class="youtube-poster__image" src={'https://i.ytimg.com/vi/' + youtubeSet.id + '/hqdefault.jpg'} width="1920" height="1080" alt={youtubeSet.title} loading="lazy" />
-                  <div class="youtube-poster__title">{youtubeSet.title}</div>
-                  <svg class="youtube-poster__play-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-                    <path fill="currentColor" d="M62.7 16.6c-.7-2.8-2.9-4.9-5.7-5.7-5-1.3-25-1.3-25-1.3s-20 0-25 1.3c-2.8.7-4.9 2.9-5.7 5.7C0 21.6 0 32 0 32s0 10.4 1.3 15.4c.7 2.8 2.9 4.9 5.7 5.7 5 1.3 25 1.3 25 1.3s20 0 25-1.3c2.8-.7 4.9-2.9 5.7-5.7C64 42.4 64 32 64 32s0-10.4-1.3-15.4zm-37.1 25V22.4L42.2 32l-16.6 9.6z" />
-                  </svg>
+                <a href={'https://www.youtube.com/watch?v=' + youtubeVideo.id} class="youtube-poster js-iframe-poster youtube-poster--small" data-embed-url={'https://www.youtube-nocookie.com/embed/' + youtubeVideo.id + '?autoplay=1'} target="_blank">
+                  <img class="youtube-poster__image" src={'https://i.ytimg.com/vi/' + youtubeVideo.id + '/hqdefault.jpg'} width="1920" height="1080" alt={youtubeVideo.title} loading="lazy" />
+                  <div class="youtube-poster__title">{youtubeVideo.title}</div>
+                  <Sprite name="youtube-play" class="youtube-poster__play-icon" />
                 </a>
               </div>
             ))
@@ -121,28 +112,28 @@ import OpenBasketButton from '../components/OpenBasketButton.astro';
             <label class="image-radio">
               <input class="image-radio__input" type="radio" name="subject" value="Booking Request" required="required" />
               <div class="image-radio__container">
-                <svg class="image-radio__image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V8h16v13z"></path><path fill="none" d="M0 0h24v24H0z"></path></svg>
+                <Sprite name="calendar" class="image-radio__image" />
                 <div class="image-radio__text">Booking<br />Request</div>
               </div>
             </label>
             <label class="image-radio">
               <input class="image-radio__input" type="radio" name="subject" value="Remix Request" required="required" />
               <div class="image-radio__container">
-                <svg class="image-radio__image" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><defs><path id="a" d="M0 0h24v24H0V0z"></path></defs><clipPath id="b"><use xlink:href="#a" overflow="visible"></use></clipPath><path clip-path="url(#b)" d="M9.01 14H2v2h7.01v3L13 15l-3.99-4v3zm5.98-1v-3H22V8h-7.01V5L11 9l3.99 4z"></path></svg>
+                <Sprite name="swap" class="image-radio__image" />
                 <div class="image-radio__text">Remix<br />Request</div>
               </div>
             </label>
             <label class="image-radio">
               <input class="image-radio__input" type="radio" name="subject" value="Promo" required="required" />
               <div class="image-radio__container">
-                <svg class="image-radio__image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"></path><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z"></path></svg>
+                <Sprite name="heart" class="image-radio__image" />
                 <div class="image-radio__text">Promo</div>
               </div>
             </label>
             <label class="image-radio">
               <input class="image-radio__input" type="radio" name="subject" value="Other" required="required" checked="checked" />
               <div class="image-radio__container">
-                <svg class="image-radio__image" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M20 2H4c-1.1 0-2 .9-2 2v18l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm0 14H6l-2 2V4h16v12z"></path></svg>
+                <Sprite name="message" class="image-radio__image" />
                 <div class="image-radio__text">Other</div>
               </div>
             </label>
@@ -154,7 +145,7 @@ import OpenBasketButton from '../components/OpenBasketButton.astro';
             <button type="submit" class="button">Send</button>
           </div>
 
-          <a href="#privacy" class="link">Privacy Policy</a>
+          <a href="/imprint" class="link">Privacy Policy</a>
         </form>
       </div>
     </div>
@@ -176,17 +167,7 @@ import OpenBasketButton from '../components/OpenBasketButton.astro';
     </div>
   </div>
 
-  <div class="section section--collapsed" id="privacy">
-    <div class="section__inner">
-      <h3 class="section__title">Imprint / Privacy.</h3>
-      <div class="section__content" lang="de-DE">
-        <p class="section__text">
-          Diese Internetseite nutzt Formspree, einen Webdienst der Webseite <a href="https://formspree.io">formspree.io</a> (nachfolgend "Formspree"). Um Ihnen die Funktionalität des Kontaktformulars zur Verfügung zu stellen, senden wir Ihre E-Mail-Adresse, Ihren Vornamen und Nachnamen an Formspree. Diese Daten werden dort verarbeitet, gespeichert und an Matthias Teifl per Mail an <span class="email-guard" data-mail="tedra-official" data-domain="web.de">@</span> weitergegeben. Außerdem werden von Formspree unter anderem weitere Daten wie Ihre IP-Adresse, Ihr Typ des Browsers, die Domain der Webseite, das Datum und die Zeit des Zugriffs erhoben, um die gewünschte Funktionalität des Kontaktformulars bereitzustellen. Eine detaillierte Übersicht der erhobenen Daten finden Sie <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener">hier</a>. Rechtsgrundlage für die Nutzung von Formspree ist Art. 6 Abs. 1 S. 1 lit. f DS-GVO (berechtigtes Interesse). In dem vorliegenden Fall werden personenbezogene Daten in die USA übertragen werden: Die Verarbeitung, Weitergabe und Speicherung der Daten ist von Formspree in dem folgenden Dokument zusammengefasst: <a href="https://formspree.io/legal/privacy-policy">Hier</a>.
-        </p>
-        <p class="section__text">&copy; {new Date().getFullYear()} Tedra</p>
-      </div>
-    </div>
-  </div>
+  <Footer />
 
   <img src="img/smiley.svg" id="smiley" style="display:none;" />
 
