--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,13 +19,13 @@ import '../scss/index.scss';
     <meta name="msapplication-TileColor" content="#0a0b0e" />
     <meta name="description" content="TEDRA - Techno. 132 bpm straight, deep, loud and hard. Behind the name lurks the german music producer Matthias Teifl. Starting in 2018, his sound always covered a wider spectrum from peak-time techno to melodic and progressive tracks. Yet always staying unique in his musical style. Experiencing Tedra live is always about the thriving rhythm of techno beats. A must-see for every fan of electronic dance music who is looking for an energetic night out." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="../assets/favicon/apple-touch-icon.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
-    <link type="preload" as="image" href="../assets/img/smiley.svg" />
-    <link type="preload" as="font" href="../assets/font/lato/latolatin-thin-webfont.woff2" crossorigin type="font/woff2" />
+    <meta property="og:image" content="/favicon/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link type="preload" as="image" href="/img/smiley.svg" />
+    <link type="preload" as="font" href="/font/lato/latolatin-thin-webfont.woff2" crossorigin type="font/woff2" />
 </head>
 
 <body>
