Remove swup again

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,25 +55,10 @@ import '../scss/index.scss';
 
     <Sprite.Provider>
       <Header/>
-      <main id="swup">
+      <main>
         <slot/>
       </main>
       <Footer/>
     </Sprite.Provider>
-
-    <script>
-      import Swup from 'swup';
-      import SwupSlideTheme from '@swup/slide-theme';
-      import SwupHeadPlugin from '@swup/head-plugin';
-      import SwupScrollPlugin from '@swup/scroll-plugin';
-
-      const swup = new Swup({
-        plugins: [
-          new SwupSlideTheme(),
-          new SwupHeadPlugin(),
-          new SwupScrollPlugin({ animateScroll: false }),
-        ]
-      });
-    </script>
 </body>
 </html>
